--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             margin-top: 20px;
             text-shadow: 2px 2px 5px rgba(255, 255, 255, 0.5);
         }
-        .raccoon {
+        .cat {
             position: absolute;
             width: 100px;
             animation: moveAround 10s linear infinite;
@@ -34,9 +34,9 @@
 </head>
 <body>
     <h1>$5 A NIGHT FOR DARRYL</h1>
-    <img class="raccoon" src="https://i.imgur.com/7QZQZQZ.png" alt="Raccoon">
-    <img class="raccoon" src="https://i.imgur.com/7QZQZQZ.png" alt="Raccoon" style="animation-delay: -2.5s;">
-    <img class="raccoon" src="https://i.imgur.com/7QZQZQZ.png" alt="Raccoon" style="animation-delay: -5s;">
-    <img class="raccoon" src="https://i.imgur.com/7QZQZQZ.png" alt="Raccoon" style="animation-delay: -7.5s;">
+    <img class="cat" src="https://placekitten.com/100/100" alt="Cat">
+    <img class="cat" src="https://placekitten.com/100/100" alt="Cat" style="animation-delay: -2.5s;">
+    <img class="cat" src="https://placekitten.com/100/100" alt="Cat" style="animation-delay: -5s;">
+    <img class="cat" src="https://placekitten.com/100/100" alt="Cat" style="animation-delay: -7.5s;">
 </body>
 </html>
