--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: #f0f0f0;
-      overflow: hidden;
       font-family: 'Arial', sans-serif;
       position: relative;
+      background: linear-gradient(to right, #ff0000, #ff9900, #33cc33, #0099ff, #9900cc); /* Pride flag gradient */
+      background-size: cover;
+      overflow: hidden;
     }
 
     /* Centered shiny pink text box */
@@ -69,30 +70,30 @@
       }
     }
 
-    /* Different cat positions */
+    /* Cat images and positions */
     .cat1 {
       background-image: url('https://placekitten.com/200/200');
-      top: 20%;
-      left: 10%;
+      top: 10%;
+      left: 5%;
     }
     .cat2 {
       background-image: url('https://placekitten.com/250/250');
-      top: 40%;
-      left: 30%;
+      top: 30%;
+      left: 25%;
     }
     .cat3 {
       background-image: url('https://placekitten.com/220/220');
-      top: 60%;
-      left: 50%;
+      top: 50%;
+      left: 45%;
     }
     .cat4 {
       background-image: url('https://placekitten.com/230/230');
-      top: 30%;
-      left: 70%;
+      top: 20%;
+      left: 65%;
     }
     .cat5 {
       background-image: url('https://placekitten.com/240/240');
-      top: 70%;
+      top: 60%;
       left: 80%;
     }
 
