--- a/index.html
+++ b/index.html
@@ -72,27 +72,22 @@
 
     /* Cat images and positions */
     .cat1 {
-      background-image: url('https://placekitten.com/200/200');
       top: 10%;
       left: 5%;
     }
     .cat2 {
-      background-image: url('https://placekitten.com/250/250');
       top: 30%;
       left: 25%;
     }
     .cat3 {
-      background-image: url('https://placekitten.com/220/220');
       top: 50%;
       left: 45%;
     }
     .cat4 {
-      background-image: url('https://placekitten.com/230/230');
       top: 20%;
       left: 65%;
     }
     .cat5 {
-      background-image: url('https://placekitten.com/240/240');
       top: 60%;
       left: 80%;
     }
@@ -107,11 +102,11 @@
   </div>
 
   <!-- Bouncing cats -->
-  <div class="cat cat1"></div>
-  <div class="cat cat2"></div>
-  <div class="cat cat3"></div>
-  <div class="cat cat4"></div>
-  <div class="cat cat5"></div>
+  <div class="cat cat1" style="background-image: url('https://cdn2.thecatapi.com/images/j9q.jpg');"></div>
+  <div class="cat cat2" style="background-image: url('https://cdn2.thecatapi.com/images/c5b.jpg');"></div>
+  <div class="cat cat3" style="background-image: url('https://cdn2.thecatapi.com/images/ckz.jpg');"></div>
+  <div class="cat cat4" style="background-image: url('https://cdn2.thecatapi.com/images/c97.jpg');"></div>
+  <div class="cat cat5" style="background-image: url('https://cdn2.thecatapi.com/images/c9o.jpg');"></div>
 
 </body>
 </html>
