--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <h1>$5 A NIGHT WITH DARRYL</h1>
 
   <!-- Button to book -->
-  <button class="book-button" onclick="location.href='page2.html'">Book Now</button>
+  <button class="book-button" onclick="location.href='page2.html'">Finger Darryl And Mrs. Kitty!</button>
 
   <!-- Celebrity Images -->
   <div class="celebrity-images">
