--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 
         <!-- Main Game Area -->
         <main>
+            <!-- Timer Display -->
+            <section class="timer">
+                <h2>Time Left: <span id="countdown">10</span>s</h2>
+            </section>
+
             <!-- Roulette Wheel -->
             <section class="roulette-wheel">
                 <div class="wheel">
